image location edited

--- a/public/rules_question1.html
+++ b/public/rules_question1.html
@@ -16,7 +16,7 @@
 
     <!-- Centered div for image and question -->
     <div style="display: flex; align-items: center; justify-content: center; flex-direction: column; text-align: center;">
-      <img src="images/rules.pgj" alt="Rules Image" style="width: 250px; height: auto; margin: 10px 0;">
+      <img src="public/images/rules.pgj" alt="Rules Image" style="width: 250px; height: auto; margin: 10px 0;">
       <p>Stop lights (braking lights) must be visible in sunlight at a distance of at least:</p>
     </div>
 
