--- a/public/rules_question2.html
+++ b/public/rules_question2.html
@@ -10,10 +10,17 @@
   <header>
     <p>Time left: <span id="timer">10:00</span></p>
   </header>
-  <main><h1>Road Rules</h1>
+  <main>
+    <h1>Road Rules</h1>
     <h2>Question 2 of 3</h2>
-    <p>When is it compulsory for a passenger to wear a seatbelt?</p>
-    <form id="rules-q2">
+
+    <!-- Centered div for image and question -->
+    <div style="display: flex; align-items: center; justify-content: center; flex-direction: column; text-align: center;">
+      <img src="images/rules.png" alt="Rules Image" style="width: 250px; height: auto; margin: 10px 0;">
+      <p>When is it compulsory for a passenger to wear a seatbelt?</p>
+    </div>
+
+    <form id="rules-q2" style="text-align: center;">
       <input type="radio" name="q2" value="A-Old people sitting in the back of the vehicle"> A-Old people sitting in the back of the vehicle <br>
       <input type="radio" name="q2" value="B-Children or adults moving forward"> B-Children or adults moving forward <br>
       <input type="radio" name="q2" value="C-All of the above"> C-All of the above <br>
