--- a/public/rules_question2.html
+++ b/public/rules_question2.html
@@ -16,7 +16,7 @@
 
     <!-- Centered div for image and question -->
     <div style="display: flex; align-items: center; justify-content: center; flex-direction: column; text-align: center;">
-      <img src="images/rules.png" alt="Rules Image" style="width: 250px; height: auto; margin: 10px 0;">
+      <img src="images/rules.jpg" alt="Rules Image" style="width: 250px; height: auto; margin: 10px 0;">
       <p>When is it compulsory for a passenger to wear a seatbelt?</p>
     </div>
 
