--- a/public/rules_question3.html
+++ b/public/rules_question3.html
@@ -10,10 +10,17 @@
   <header>
     <p>Time left: <span id="timer">10:00</span></p>
   </header>
-  <main><h1>Road Rules</h1>
+  <main>
+    <h1>Road Rules</h1>
     <h2>Question 3 of 3</h2>
-    <p>A driver's license must always be kept:</p>
-    <form id="rules-q3">
+
+    <!-- Centered div for image and question -->
+    <div style="display: flex; align-items: center; justify-content: center; flex-direction: column; text-align: center;">
+      <img src="images/rules.jpg" alt="Rules Image" style="width: 250px; height: auto; margin: 10px 0;">
+      <p>A driver's license must always be kept:</p>
+    </div>
+
+    <form id="rules-q3" style="text-align: center;">
       <input type="radio" name="q3" value="A-Inside the vehicle"> A-Inside the vehicle <br>
       <input type="radio" name="q3" value="B-With the driver"> B-With the driver <br>
       <input type="radio" name="q3" value="C-All of the above"> C-All of the above <br>
