--- a/public/signs_question1.html
+++ b/public/signs_question1.html
@@ -10,10 +10,17 @@
   <header>
     <p>Time left: <span id="timer">10:00</span></p>
   </header>
-  <main><h1>Road Signs</h1>
+  <main>
+    <h1>Road Signs</h1>
     <h2>Question 1 of 3</h2>
-    <p>What does this sign indicate?</p>
-    <form id="signs-q1">
+
+    <!-- Centered div for image and question -->
+    <div style="display: flex; align-items: center; justify-content: center; flex-direction: column; text-align: center;">
+      <img src="images/sign1.png" alt="Sign 1 Image" style="width: 250px; height: auto; margin: 10px 0;">
+      <p>What does this sign indicate?</p>
+    </div>
+
+    <form id="signs-q1" style="text-align: center;">
       <input type="radio" name="q1" value="A-Turn right at the next intersection"> A-Turn right at the next intersection <br>
       <input type="radio" name="q1" value="B-Turn right immediately"> B-Turn right immediately <br>
       <input type="radio" name="q1" value="C-A sharp bend in the road to the right"> C-A sharp bend in the road to the right <br>
