--- a/public/controls_question2.html
+++ b/public/controls_question2.html
@@ -20,7 +20,7 @@
       <p>Which control prevents a parked vehicle from moving?</p>
     </div>
 
-    <form id="control-q2">
+    <form id="control-q2" style="text-align: center;">
       <input type="radio" name="q2" value="A-10"> A-10 <br>
       <input type="radio" name="q2" value="B-5"> B-5 <br>
       <input type="radio" name="q2" value="C-7"> C-7 <br>
