text aligned at center

--- a/public/controls_question1.html
+++ b/public/controls_question1.html
@@ -20,7 +20,7 @@
       <p>Which control does a vehicle with automatic transmission not have?</p>
     </div>
 
-    <form id="control-q1">
+    <form id="control-q1" style="text-align: center;" >
       <input type="radio" name="q1" value="A-1"> A-1 <br>
       <input type="radio" name="q1" value="B-6"> B-6 <br>
       <input type="radio" name="q1" value="C-8"> C-8 <br>
