--- a/public/login.html
+++ b/public/login.html
@@ -9,8 +9,10 @@
 <body>
     <header>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="sign-up.html">Sign Up</a>
+            <ul>
+               <li><a href="index.html">Home</a></li>
+               <li><a href="sign-up.html">Sign Up</a></li>
+            </ul>
         </nav>
     </header>
     <main>
