--- a/public/login.html
+++ b/public/login.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Mzansi Drive</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"> <!-- Make sure this is consistent with the index page CSS file -->
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
+        <!-- Add logo and center content like the index page -->
+        <nav style="display: flex; flex-direction: column; align-items: center;">
+            <img src="images/logo.png" alt="Mzansi Drive Logo" width="200" height="200">
+            <ul style="display: flex; gap: 20px; list-style: none; padding: 0;">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="sign-up.html">Sign Up</a></li>
             </ul>
         </nav>
     </header>
-    <main>
+    
+    <main style="text-align: center;">
         <h1>Login</h1>
-        <form action="home.html">
+        <form action="home.html" style="display: flex; flex-direction: column; align-items: center;">
             <label for="username">Username</label>
             <input type="text" id="username" name="username" required>
             <label for="password">Password</label>
@@ -26,6 +29,7 @@
         </form>
         <p>Don't have an account? <a href="sign-up.html">Sign up here</a></p>
     </main>
-    <footer>&copy; 2024 Mzansi Drive</footer>
+    
+    <footer style="text-align: center;">&copy; 2024 Mzansi Drive</footer>
 </body>
 </html>
