--- a/public/profile.html
+++ b/public/profile.html
@@ -4,7 +4,68 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Profile - Drive Mzansi</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css"> <!-- Link to your main stylesheet -->
+  <style>
+    /* Centering and layout styles */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+
+    header {
+      background-color: #333;
+      padding: 20px;
+    }
+
+    nav ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+    }
+
+    nav li {
+      padding: 14px 20px;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+    }
+
+    nav a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+
+    main {
+      padding: 20px;
+    }
+
+    h2 {
+      margin-top: 20px;
+    }
+
+    #results-container {
+      margin-top: 20px;
+      text-align: left;
+      max-width: 600px;
+      margin: auto;
+      border: 1px solid #333;
+      padding: 15px;
+      background-color: #f8f8f8;
+      border-radius: 8px;
+    }
+
+    .result-item {
+      margin-bottom: 10px;
+      padding: 10px;
+      border-bottom: 1px solid #ddd;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -13,18 +74,23 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="profile.html">Profile</a></li>
         <li><a href="login.html">Login</a></li>
-        <li><a href="signup.html">Sign Up</a></li>
-        <li><a href="controls.html">Controls</a></li>
-        <li><a href="rules.html">Rules</a></li>
-        <li><a href="signs.html">Signs</a></li>
+        <li><a href="sign-up.html">Sign Up</a></li>
+        <li><a href="controls_question1.html">Take Test</a></li>
       </ul>
     </nav>
+    <img src="images/logo.png" alt="Drive Mzansi Logo" width="150" height="150">
   </header>
   
   <main>
     <h2>Your Profile</h2>
-    <div id="results-container"></div> <!-- Where test results will be displayed -->
+    <p>Here you can view your past test results.</p>
+    
+    <div id="results-container">
+      <!-- Test results will be dynamically loaded here -->
+    </div>
   </main>
+
+  <footer>&copy; 2024 Drive Mzansi</footer>
 
   <script src="public/profile.js"></script> <!-- Link to your JS file -->
 </body>
