form action changed

--- a/public/login.html
+++ b/public/login.html
@@ -69,7 +69,7 @@
     
     <main>
         <h1>Login</h1>
-        <form action="home.html" style="display: flex; flex-direction: column; align-items: center;">
+        <form action="profile.html" style="display: flex; flex-direction: column; align-items: center;">
             <label for="username">Username</label>
             <input type="text" id="username" name="username" required>
             <label for="password">Password</label>
