added js script

--- a/public/login.html
+++ b/public/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Drive Mzansi</title>
-    <link rel="stylesheet" href="public/css/styles.css"> <!-- Link to your main CSS file -->
+    <link rel="stylesheet" href="public/css/styles.css">
     <style>
         /* Ensure the menu bar and layout match the index page */
         body {
@@ -20,7 +20,7 @@
         }
 
         nav {
-            background-color: #333; /* Black background for menu */
+            background-color: #333;
             overflow: hidden;
         }
 
@@ -37,13 +37,13 @@
         }
 
         nav a {
-            color: white; /* White text color for links */
+            color: white;
             text-decoration: none;
         }
 
         nav a:hover {
-            background-color: #ddd; /* Light gray hover effect */
-            color: black; /* Black text on hover */
+            background-color: #ddd;
+            color: black;
         }
 
         main {
@@ -69,7 +69,7 @@
     
     <main>
         <h1>Login</h1>
-        <form action="profile.html" style="display: flex; flex-direction: column; align-items: center;">
+        <form id="login-form" style="display: flex; flex-direction: column; align-items: center;">
             <label for="username">Username</label>
             <input type="text" id="username" name="username" required>
             <label for="password">Password</label>
@@ -82,5 +82,23 @@
     <footer>
         <p>&copy; 2024 Drive Mzansi</p>
     </footer>
+
+    <script>
+        // JavaScript to handle login
+        document.getElementById("login-form").addEventListener("submit", function(event) {
+            event.preventDefault(); // Prevent form from submitting the default way
+
+            // Sample hardcoded credentials for testing (replace with actual authentication logic)
+            const username = document.getElementById("username").value;
+            const password = document.getElementById("password").value;
+
+            // Simple check for hardcoded credentials
+            if (username === "testuser" && password === "password123") {
+                window.location.href = "profile.html"; // Redirect to profile page if credentials match
+            } else {
+                alert("Incorrect username or password. Please try again.");
+            }
+        });
+    </script>
 </body>
 </html>
