--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,7 @@
                 <li><a href="login.html">Login</a></li>
                 <li><a href="sign-up.html">Sign Up</a></li>
                 <li><a href="home.html">Take the Test</a></li>
+                <li><a href="profile.html">Profile</a></li>
                 <li><a href="results.html">View Results</a></li>
             </ul>
         </nav>
