edited profile page

--- a/public/profile.html
+++ b/public/profile.html
@@ -75,7 +75,7 @@
         <li><a href="profile.html">Profile</a></li>
         <li><a href="login.html">Login</a></li>
         <li><a href="sign-up.html">Sign Up</a></li>
-        <li><a href="controls_question1.html">Take Test</a></li>
+        <li><a href="home.html">Take the Test</a></li>
       </ul>
     </nav>
     <img src="images/logo.png" alt="Drive Mzansi Logo" width="150" height="150">
