--- a/public/results.html
+++ b/public/results.html
@@ -4,15 +4,79 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Results - Drive Mzansi</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="public/css/styles.css">
+  <style>
+    /* Page consistency and styling */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+
+    header {
+      background-color: #f8f8f8;
+      padding: 20px;
+    }
+
+    nav {
+      background-color: #333;
+      overflow: hidden;
+    }
+
+    nav ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+    }
+
+    nav li {
+      padding: 14px 20px;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+    }
+
+    nav a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+
+    main {
+      padding: 20px;
+    }
+
+    footer {
+      background-color: #f8f8f8;
+      padding: 10px;
+    }
+  </style>
 </head>
 <body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="profile.html">Profile</a></li>
+      </ul>
+    </nav>
+    <img src="images/logo.png" alt="Drive Mzansi Logo" width="300" height="300">
+  </header>
+
   <main>
     <h2>Your Results</h2>
     <p id="score"></p>
     <p id="percentage"></p>
-    <button onclick="startTest()">Start Test</button> <!-- Button to restart test -->
+    <button onclick="startTest()">Start Test</button>
   </main>
+
+  <footer>
+    <p>&copy; 2024 Drive Mzansi</p>
+  </footer>
 
   <script>
     // Function to display results
@@ -31,7 +95,7 @@
 
     // Function to redirect to the test starting point
     function startTest() {
-      window.location.href = "home.html"; // Change to your starting point
+      window.location.href = "home.html";
     }
 
     // Call displayResults when the page loads
@@ -39,4 +103,3 @@
   </script>
 </body>
 </html>
-
