back button edited

--- a/public/rules_question1.html
+++ b/public/rules_question1.html
@@ -115,7 +115,7 @@
       <input type="radio" name="q1" value="D-35 Meters"> D-35 Meters <br>
 
       <div class="button-container">
-        <a href="index.html" class="button back-button">Back</a> <!-- Back button -->
+        <a href="controls_question3.html" class="button back-button">Back</a> <!-- Back button -->
         <button type="submit" class="button">Next</button> <!-- Next button -->
       </div>
     </form>
