--- a/public/signs_question3.html
+++ b/public/signs_question3.html
@@ -3,32 +3,129 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Signs Question 3</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Signs Question 3 - Drive Mzansi</title>
+  <link rel="stylesheet" href="public/css/styles.css">
+  <style>
+    /* Page styling for consistency */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+
+    header {
+      background-color: #f8f8f8;
+      padding: 20px;
+    }
+
+    nav {
+      background-color: #333;
+      overflow: hidden;
+    }
+
+    nav ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+    }
+
+    nav li {
+      padding: 14px 20px;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+    }
+
+    nav a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+
+    main {
+      padding: 20px;
+    }
+
+    footer {
+      background-color: #f8f8f8;
+      padding: 10px;
+    }
+
+    #timer {
+      font-weight: bold;
+    }
+
+    .button-container {
+      display: flex;
+      justify-content: center;
+      margin-top: 20px;
+    }
+
+    .button {
+      padding: 10px 15px;
+      background-color: #4CAF50; /* Green background */
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      margin: 0 5px; /* Add space between buttons */
+      text-decoration: none; /* Ensure no underline */
+    }
+
+    .button:hover {
+      background-color: #45a049; /* Darker green on hover */
+    }
+
+    .back-button {
+      background-color: #f44336; /* Red background for back button */
+    }
+
+    .back-button:hover {
+      background-color: #d32f2f; /* Darker red on hover */
+    }
+  </style>
 </head>
 <body>
   <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+      </ul>
+    </nav>
     <p>Time left: <span id="timer">10:00</span></p>
   </header>
+
   <main>
     <h1>Road Signs</h1>
     <h2>Question 3 of 3</h2>
 
-    <!-- Centered div for image and question -->
     <div style="display: flex; align-items: center; justify-content: center; flex-direction: column; text-align: center;">
       <img src="images/sign3.png" alt="Sign 3 Image" style="width: 250px; height: auto; margin: 10px 0;">
       <p>What does this sign indicate?</p>
     </div>
 
     <form id="signs-q3" style="text-align: center;">
-      <input type="radio" name="q3" value="A-Dead end ahead"> A-Dead end ahead <br>
+      <input type="radio" name="q3" value="A-Dead end ahead" required> A-Dead end ahead <br>
       <input type="radio" name="q3" value="B-Turn only left or right"> B-Turn only left or right <br>
       <input type="radio" name="q3" value="C-Do not enter"> C-Do not enter <br>
       <input type="radio" name="q3" value="D-Line on the road"> D-Line on the road <br>
-      <button type="submit">Submit Test</button>
+
+      <div class="button-container">
+        <a href="signs_question2.html" class="button back-button">Back</a> <!-- Back button -->
+        <button type="submit" class="button">Submit Test</button> <!-- Submit button -->
+      </div>
     </form>
   </main>
-  <script src="timer.js"></script>
+
+  <footer>
+    <p>&copy; 2024 Drive Mzansi</p>
+  </footer>
+
+  <script src="public/js/timer.js"></script>
   <script>
     document.getElementById('signs-q3').addEventListener('submit', function(e) {
       e.preventDefault();
