--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -20,7 +20,7 @@
       }
 
       nav {
-          background-color: #333; /* Black background for menu */
+          background-color: #333;
           overflow: hidden;
       }
 
@@ -37,13 +37,13 @@
       }
 
       nav a {
-          color: white; /* White text color for links */
+          color: white;
           text-decoration: none;
       }
 
       nav a:hover {
-          background-color: #ddd; /* Light gray hover effect */
-          color: black; /* Black text on hover */
+          background-color: #ddd;
+          color: black;
       }
 
       main {
@@ -94,6 +94,6 @@
     <p>&copy; 2024 Drive Mzansi</p>
   </footer>
 
-  <script src="signup.js"></script> <!-- Link to signup.js -->
+  <script src="auth.js"></script> <!-- Link to auth.js -->
 </body>
 </html>
