--- a/public/home.html
+++ b/public/home.html
@@ -20,7 +20,7 @@
       }
 
       nav {
-          background-color: #333; /* Black background for menu */
+          background-color: #333;
           overflow: hidden;
       }
 
@@ -37,13 +37,13 @@
       }
 
       nav a {
-          color: white; /* White text color for links */
+          color: white;
           text-decoration: none;
       }
 
       nav a:hover {
-          background-color: #ddd; /* Light gray hover effect */
-          color: black; /* Black text on hover */
+          background-color: #ddd;
+          color: black;
       }
 
       main {
@@ -53,6 +53,26 @@
       footer {
           background-color: #f8f8f8;
           padding: 10px;
+      }
+
+      #start-test-btn {
+          padding: 10px 20px;
+          font-size: 16px;
+          margin: 10px;
+      }
+
+      #logout-btn {
+          padding: 10px 20px;
+          font-size: 16px;
+          background-color: #f44336;
+          color: white;
+          border: none;
+          border-radius: 5px;
+          cursor: pointer;
+      }
+
+      #logout-btn:hover {
+          background-color: #d32f2f;
       }
   </style>
 </head>
@@ -67,8 +87,9 @@
   </header>
 
   <main>
-    <h1>Welcome, [User]!</h1>
-    <button id="start-test-btn" style="padding: 10px 20px; font-size: 16px;">Start Test</button>
+    <h1>Welcome, <span id="user-name">User</span>!</h1>
+    <button id="start-test-btn">Start Test</button>
+    <button id="logout-btn">Logout</button>
   </main>
 
   <footer>
@@ -76,8 +97,24 @@
   </footer>
 
   <script>
-    document.getElementById('start-test-btn').addEventListener('click', function() {
-      window.location.href = 'controls_question1.html';
+    document.addEventListener('DOMContentLoaded', function() {
+      // Retrieve and display user's name
+      const userName = localStorage.getItem('userName');
+      if (userName) {
+        document.getElementById('user-name').textContent = userName;
+      }
+
+      // Start Test button functionality
+      document.getElementById('start-test-btn').addEventListener('click', function() {
+        window.location.href = 'controls_question1.html';
+      });
+
+      // Logout button functionality
+      document.getElementById('logout-btn').addEventListener('click', function() {
+        localStorage.clear(); // Clear user data
+        alert('You have been logged out.');
+        window.location.href = 'index.html'; // Redirect to the homepage
+      });
     });
   </script>
 </body>
