--- a/public/login.html
+++ b/public/login.html
@@ -83,6 +83,9 @@
         <p>&copy; 2024 Drive Mzansi</p>
     </footer>
 
+    <!-- Include Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js"></script>
     <script src="public/js/login.js"></script> <!-- Link to login.js -->
 </body>
 </html>
