--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -94,6 +94,9 @@
     <p>&copy; 2024 Drive Mzansi</p>
   </footer>
 
+  <!-- Include Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js"></script>
   <script src="auth.js"></script> <!-- Link to auth.js -->
 </body>
 </html>
