--- a/public/profile.html
+++ b/public/profile.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Profile - Drive Mzansi</title>
-  <link rel="stylesheet" href="styles.css"> <!-- Link to your main stylesheet -->
+  <link rel="stylesheet" href="public/css/styles.css"> <!-- Link to your main stylesheet -->
   <style>
     /* Centering and layout styles */
     body {
@@ -92,6 +92,10 @@
 
   <footer>&copy; 2024 Drive Mzansi</footer>
 
+  <!-- Include Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js"></script> <!-- Include Firestore if needed -->
   <script src="public/profile.js"></script> <!-- Link to your JS file -->
 </body>
 </html>
