--- a/public/home.html
+++ b/public/home.html
@@ -96,12 +96,26 @@
     <p>&copy; 2024 Drive Mzansi</p>
   </footer>
 
+  <!-- Include Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js"></script>
+  <script src="public/js/home.js"></script> <!-- Link to your main JavaScript file -->
+
   <script>
     document.addEventListener('DOMContentLoaded', function() {
+      // Initialize Firebase
+      const firebaseConfig = {
+        // Your Firebase configuration goes here
+      };
+      firebase.initializeApp(firebaseConfig);
+
       // Retrieve and display user's name
       const userName = localStorage.getItem('userName');
       if (userName) {
         document.getElementById('user-name').textContent = userName;
+      } else {
+        alert('No user is logged in. Please log in again.');
+        window.location.href = 'index.html'; // Redirect to the homepage if not logged in
       }
 
       // Start Test button functionality
@@ -111,9 +125,13 @@
 
       // Logout button functionality
       document.getElementById('logout-btn').addEventListener('click', function() {
-        localStorage.clear(); // Clear user data
-        alert('You have been logged out.');
-        window.location.href = 'index.html'; // Redirect to the homepage
+        firebase.auth().signOut().then(() => {
+          localStorage.clear(); // Clear user data
+          alert('You have been logged out.');
+          window.location.href = 'index.html'; // Redirect to the homepage
+        }).catch((error) => {
+          console.error('Sign Out Error', error);
+        });
       });
     });
   </script>
