--- a/public/login.html
+++ b/public/login.html
@@ -91,12 +91,12 @@
 
         // Your Firebase configuration
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_PROJECT_ID.appspot.com",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
+            apiKey: "AIzaSyCglZk-B-Phojvp31xGxxxACfyO4w6lges",
+            authDomain: "drive-mzansi-app.firebaseapp.com",
+            projectId: "drive-mzansi-app",
+            storageBucket: "drive-mzansi-app.appspot.com",
+            messagingSenderId: "1007195133421",
+            appId: "1:1007195133421:web:1b7ec3cd063a31c05543e4"
         };
 
         // Initialize Firebase
