--- a/public/home.html
+++ b/public/home.html
@@ -103,31 +103,35 @@
   <!-- Initialize Firebase -->
   <script>
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_PROJECT_ID.appspot.com",
-      messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-      appId: "YOUR_APP_ID"
+      apiKey: "AIzaSyCglZk-B-Phojvp31xGxxxACfyO4w6lges",
+      authDomain: "drive-mzansi-app.firebaseapp.com",
+      projectId: "drive-mzansi-app",
+      storageBucket: "drive-mzansi-app.appspot.com",
+      messagingSenderId: "1007195133421",
+      appId: "1:1007195133421:web:1b7ec3cd063a31c05543e4",
+      measurementId: "G-WGTMR2MFRY" // Optional for Analytics
     };
     
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
+
+    // Check if user is logged in
+    firebase.auth().onAuthStateChanged((user) => {
+      if (user) {
+        // User is signed in, display their name
+        document.getElementById('user-name').textContent = user.email;
+      } else {
+        // No user is signed in, redirect to index page or show an error
+        alert("No user logged in. Redirecting to login page.");
+        window.location.href = "index.html"; // Redirect to the homepage if not logged in
+      }
+    });
   </script>
 
   <script src="public/js/home.js" type="module"></script> <!-- Use type="module" -->
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
-      // Retrieve and display user's name
-      const userName = localStorage.getItem('userName');
-      if (userName) {
-        document.getElementById('user-name').textContent = userName;
-      } else {
-        alert('No user is logged in. Please log in again.');
-        window.location.href = 'index.html'; // Redirect to the homepage if not logged in
-      }
-
       // Start Test button functionality
       document.getElementById('start-test-btn').addEventListener('click', function() {
         window.location.href = 'controls_question1.html'; // Ensure this path is correct
@@ -136,7 +140,6 @@
       // Logout button functionality
       document.getElementById('logout-btn').addEventListener('click', function() {
         firebase.auth().signOut().then(() => {
-          localStorage.clear(); // Clear user data
           alert('You have been logged out.');
           window.location.href = 'index.html'; // Redirect to the homepage
         }).catch((error) => {
