--- a/public/login.html
+++ b/public/login.html
@@ -115,7 +115,7 @@
                 .then((userCredential) => {
                     // Signed in
                     alert("Login successful!");
-                    window.location.href = "profile.html"; // Redirect to profile page
+                    window.location.href = "home.html"; // Redirect to Start Test page
                 })
                 .catch((error) => {
                     const errorCode = error.code;
