--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -97,6 +97,6 @@
   <!-- Include Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js"></script>
-  <script src="auth.js"></script> <!-- Link to auth.js -->
+  <script src="public/js/signup.js"></script> <!-- Link to signup.js -->
 </body>
 </html>
